@@ -11,6 +11,7 @@ ubiquity-slideshow-ubuntu (16) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Use the official Firefox icon, rather than a generic browser icon.
   * Freeze exception for new design (LP: #538411).
+  * Update the update-launchpad-translations script.
 
   [ Richard A. Johnson ]
   * Updated slideshow for Kubuntu installer
